# Kuplung

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KuplungCuda.bash  KuplungCuda.make  README.md  appveyor.yml  lizard.txt  lizard_duplicates.txt
Kuplung/: .clang-format  .editorconfig  CMakeLists.txt  CMakeLists_APPLE.cmake  CMakeLists_APPLE.txt  CMakeLists_UNIX.cmake  CMakeLists_UNIX.txt  CMakeLists_WIN32.cmake  CMakeLists_WIN32.txt  FindAssimp.cmake  FindMinizip.cmake  Info.plist  Kuplung.pro  cppcheck.cmake  main.cpp
Kuplung/cmake/: FindGLM.cmake  Findbenchmark.cmake
Kuplung/kuplung/: Kuplung.cpp  Kuplung.hpp
Kuplung/kuplung/cuda/: CudaExamples.cpp  CudaExamples.hpp
Kuplung/kuplung/cuda/cu/: cuda_OBJParser.cu  cuda_oceanFFT_kernel.cu  cuda_vectorAddition.cu
Kuplung/kuplung/cuda/examples/: VectorAddition.cpp  VectorAddition.hpp  oceanFFT.cpp  oceanFFT.hpp  oceanFFT0.cpp  oceanFFT0.hpp
Kuplung/kuplung/meshes/: AxisHelpers.cpp  AxisHelpers.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  CameraModel.cpp  CameraModel.hpp  CoordinateSystem.cpp  CoordinateSystem.hpp  Dot.cpp  Dot.hpp  Light.cpp  Light.hpp  LightLamp.cpp  LightLamp.hpp  LightRay.cpp  LightRay.hpp  MeshCoordinateSystem.cpp  MeshCoordinateSystem.hpp  MeshDot.cpp  MeshDot.hpp  MeshGrid.cpp  MeshGrid.hpp  MeshLight.cpp  MeshLight.hpp  MeshModelFace.cpp  MeshModelFace.hpp  MeshTerrain.cpp  MeshTerrain.hpp  Model.hpp  ModelDeferred.cpp  ModelDeferred.hpp  ModelFace.cpp  ModelFace.hpp  ModelFaceDeferred.cpp  ModelFaceDeferred.hpp  ModelFaceForward.hpp  ModelForward.hpp  RayLine.cpp  (+7 more)
Kuplung/kuplung/meshes/artefacts/: Shadertoy.cpp  Shadertoy.hpp  Spaceship.cpp  Spaceship.hpp  StructuredVolumetricSampling.cpp  StructuredVolumetricSampling.hpp  Terrain.cpp  Terrain.hpp
Kuplung/kuplung/meshes/deferred/: GBuffer.cpp  GBuffer.hpp  GeometryPass.cpp  GeometryPass.hpp
Kuplung/kuplung/meshes/helpers/: AxisHelpers.cpp  AxisHelpers.hpp  AxisLabels.cpp  AxisLabels.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  CameraModel.cpp  CameraModel.hpp  Grid2D.cpp  Grid2D.hpp  Light.cpp  Light.hpp  LightRay.cpp  LightRay.hpp  MiniAxis.cpp  MiniAxis.hpp  RayLine.cpp  RayLine.hpp  Skybox.cpp  Skybox.hpp  StructuredVolumetricSampling.cpp  StructuredVolumetricSampling.hpp  VertexSphere.cpp  VertexSphere.hpp  WorldGrid.cpp  WorldGrid.hpp
Kuplung/kuplung/meshes/scene/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelDeferred.cpp  ModelDeferred.hpp  ModelFace.cpp  ModelFace.hpp  ModelFaceBase.cpp  ModelFaceBase.hpp  ModelFaceData.cpp  ModelFaceData.hpp  ModelFaceDeferred.cpp  ModelFaceDeferred.hpp  ModelFaceDeferredMesh.cpp  ModelFaceDeferredMesh.hpp  ModelFaceDeferredT.cpp  ModelFaceDeferredT.hpp  ModelFaceForward.cpp  ModelFaceForward.hpp  ModelForward.cpp  ModelForward.hpp  Terrain.cpp  Terrain.hpp
Kuplung/kuplung/objects/: ObjectDefinitions.h  Objects.h  ObjectsManager.cpp  ObjectsManager.hpp  RayPicking.cpp  RayPicking.hpp  RenderingManager.cpp  RenderingManager.hpp
Kuplung/kuplung/pcg/: HeightmapGenerator.cpp  HeightmapGenerator.hpp  SpaceshipMeshGenerator.cpp  SpaceshipMeshGenerator.hpp  VoronoiGenerator.cpp  VoronoiGenerator.hpp
Kuplung/kuplung/rendering/: RenderingDeferred.cpp  RenderingDeferred.hpp  RenderingForward.cpp  RenderingForward.hpp  RenderingManager.cpp  RenderingManager.hpp  RenderingSimple.cpp  RenderingSimple.hpp
Kuplung/kuplung/settings/: ConfigUtils.cpp  ConfigUtils.hpp  FontsList.cpp  FontsList.hpp  Settings.cpp  Settings.h  SettingsStructs.h
Kuplung/kuplung/terrain/: HeightmapGenerator.cpp  HeightmapGenerator.hpp
Kuplung/kuplung/ui/: GUI.cpp  GUI.hpp  Objects.h  UI.cpp  UI.hpp  UIHelpers.cpp  UIHelpers.hpp  UIManager.cpp  UIManager.hpp
Kuplung/resources/: Kuplung.icns  Kuplung_RecentFiles.ini  Kuplung_Settings.ini  kuplung.rc
Kuplung/resources/axis_helpers/: x_minus.mtl  x_plus.mtl  y_minus.mtl  y_plus.mtl  z_minus.mtl  z_plus.mtl
Kuplung/resources/gui/: camera.mtl  light.mtl  light_directional.mtl  light_hemi.mtl  light_point.mtl  light_spot.mtl  light_sun.mtl  ui_font.fnt
Kuplung/resources/lua/: test.lua
Kuplung/resources/protobuf/: KuplungAppScene.proto  KuplungAppSettings.proto  KuplungDefinitions.proto  KuplungProtoBufs.proto
Kuplung/resources/shaders/: axis.frag  axis.vert  axis_helpers.vert  axis_labels.frag  axis_labels.vert  bounding_box.vert  camera.frag  camera.vert  deferred_g_buffer.frag  deferred_g_buffer.vert  deferred_light_box.frag  deferred_light_box.vert  deferred_model_face_geometry.frag  deferred_model_face_geometry.vert  deferred_shading.frag  deferred_shading.vert  dots.frag  dots.vert  geometry_pass.frag  geometry_pass.vert  grid.frag  grid.vert  grid2d.frag  grid2d.vert  kuplung.frag  kuplung.geom  kuplung.tcs  kuplung.tes  kuplung.vert  light.frag  light.vert  light_ray.frag  light_ray.vert  model_face.frag  model_face.geom  model_face.tcs  model_face.tes  model_face.vert  model_face_effects.frag  model_face_lights.frag  (+35 more)
Kuplung/resources/shadertoy/: LICENSE.txt
Kuplung/resources/shapes/: MaterialBall.mtl  brick_wall.mtl  cone.mtl  cube.mtl  cylinder.mtl  grid.mtl  ico_sphere.mtl  monkey_head.mtl  plane.mtl  plane_objects.mtl  plane_objects_large.mtl  torus.mtl  triangle.mtl  tube.mtl  uv_sphere.mtl
Kuplung/utilities/font-parser/: FNTParser.cpp  FNTParser.hpp
Kuplung/utilities/gl/: GLIncludes.h  GLUtils.cpp  GLUtils.hpp
Kuplung/utilities/gui/: GUI.cpp  GUI.hpp  GUIColorPicker.cpp  GUIColorPicker.hpp  GUIEditor.cpp  GUIEditor.hpp  GUIFileBrowser.cpp  GUIFileBrowser.hpp  GUILog.hpp  GUIScreenshot.cpp  GUIScreenshot.hpp  GUIStyle.cpp  GUIStyle.hpp  GUITabs.cpp  GUITabs.hpp  IconsFontAwesome.h  Objects.h
Kuplung/utilities/input/: Controls.cpp  Controls.hpp
Kuplung/utilities/libnoise/: HeightmapGenerator.cpp  HeightmapGenerator.hpp
Kuplung/utilities/settings/: ConfigUtils.cpp  ConfigUtils.hpp  FontsList.cpp  FontsList.hpp  Settings.cpp  Settings.h
Kuplung/utilities/stb/: stb_image.h  stb_image_write.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
(+301 files in other folders)
